Fixed bugs and alignment

--- a/client/src/components/Homepage/HomePage.css
+++ b/client/src/components/Homepage/HomePage.css
@@ -73,14 +73,12 @@ body {
 }
 #popup {
   width: 100%;
-  height: 100%;
   display: flex;
   visibility: hidden;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
+  /* flex-direction: row; */
   position: absolute;
-  bottom: 10%;
   padding: 0 20px;
   z-index: 25;
 }
@@ -92,10 +90,11 @@ body {
   font-size: 1.5rem;
   background-color: rgba(255, 255, 255, 0.5);
   position: absolute;
-  top: 152px;
+  top: -5%;
+  right: auto;
   font-weight: 500;
   padding: 0px 10px;
-  border-radius: 5px;
+  border-radius: 50px;
 }
 .shine {
   mix-blend-mode: screen;
@@ -168,14 +167,14 @@ body {
   display: flex;
   flex-direction: row;
   font-family: "Montserrat", sans-serif;
-  padding-right: 15%;
+  padding-right: 18%;
   z-index: 10;
 }
 .linktxt:hover {
   color: aqua;
 }
 .linktxt {
-  font-size: 20px;
+  font-size: 17px;
 }
 .hov {
   color: white;
@@ -183,8 +182,8 @@ body {
   padding-left: 5%;
 }
 .icons {
-  width: 25px;
-  height: 25px;
+  width: 23px;
+  height: 23px;
   margin: auto 0;
 }
 #youtube,
@@ -200,13 +199,10 @@ body {
     font-size: 6rem;
   }
   #text::before {
-    font-size: 1.2rem;
+    font-size: 1.15rem;
   }
   #countdown {
     width: 25%;
-  }
-  #close {
-    top: 210px;
   }
   .globe {
     bottom: 0%;
@@ -240,17 +236,20 @@ body {
     font-size: 1.5rem;
   }
   #links {
-    padding-right: 18%;
+    padding-right: 19%;
+  }
+  #text::before {
+    font-size: 0.95rem;
   }
   .hov {
     font-size: 1.1rem;
   }
   .icons {
-    width: 23px;
-    height: 23px;
+    width: 20px;
+    height: 20px;
   }
   .linktxt {
-    font-size: 17px;
+    font-size: 14px;
   }
   .globe {
     bottom: 0%;
@@ -282,17 +281,17 @@ body {
     width: 22%;
   }
   #links {
-    padding-right: 25%;
+    padding-right: 24%;
   }
   .hov {
     font-size: 1rem;
   }
   .icons {
-    width: 20px;
-    height: 20px;
+    width: 18px;
+    height: 18px;
   }
   .linktxt {
-    font-size: 15px;
+    font-size: 13px;
   }
   .day-time,
   .hour-time,
@@ -304,7 +303,7 @@ body {
     font-size: 5rem;
   }
   #text::before {
-    font-size: 1rem;
+    font-size: 0.95rem;
   }
   .globe {
     bottom: 0%;
@@ -335,17 +334,17 @@ body {
     width: 20%;
   }
   #links {
-    padding-right: 27%;
+    padding-right: 24%;
   }
   .hov {
     font-size: 0.9rem;
   }
   .icons {
-    width: 17px;
-    height: 17px;
+    width: 15px;
+    height: 15px;
   }
   .linktxt {
-    font-size: 13px;
+    font-size: 12px;
   }
   .day-time,
   .hour-time,
@@ -363,7 +362,7 @@ body {
     font-size: 4.2rem;
   }
   #text::before {
-    font-size: 0.825rem;
+    font-size: 0.8rem;
   }
   .globe {
     bottom: 0%;
@@ -392,17 +391,17 @@ body {
     transform: translateY(30vh);
   }
   #links {
-    padding-right: 28%;
+    padding-right: 23%;
   }
   .hov {
     font-size: 0.8rem;
   }
   .icons {
-    width: 15px;
-    height: 15px;
+    width: 13px;
+    height: 13px;
   }
   .linktxt {
-    font-size: 12px;
+    font-size: 11px;
   }
 
   .day-time,
@@ -453,7 +452,7 @@ body {
   }
 
   #links {
-    padding-right: 30%;
+    padding-right: 21%;
   }
   .hov {
     font-size: 0.5rem;
@@ -487,7 +486,7 @@ body {
     font-size: 2.3rem;
   }
   #text::before {
-    font-size: 0.46rem;
+    font-size: 0.425rem;
   }
   .globe {
     bottom: 0%;
